--- a/deploy/DockerArea/my-nginx/docker-compose.yml
+++ b/deploy/DockerArea/my-nginx/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - TZ=Asia/Taipei
     volumes:
       - ../../game:/usr/share/nginx/html/game
+      - ./default.conf:/etc/nginx/conf.d/default.conf
     security_opt:
       - seccomp:unconfined
       
